--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,29 @@
 .env
 .env.*
 secrets.local.env
+__pycache__/
+*.py[cod]
+*.egg-info/
+dist/
+build/
+.pytest_cache/
+
+# Node/Next.js
+**/node_modules/
+**/.next/
+**/out/
+**/.vercel/
+**/.turbo/
+**/.swc/
+**/coverage/
+
+# Local env files
+**/.env.local
+**/.env.development.local
+**/.env.test.local
+**/.env.production.local
+
+# Editor/OS
+.DS_Store
+.vscode/
+.idea/
