--- a/services/api/requirements.txt
+++ b/services/api/requirements.txt
@@ -1,6 +1,6 @@
 fastapi==0.112.2
 uvicorn==0.30.6
-strawberry-graphql==0.231.0
+strawberry-graphql==0.281.0
 pyyaml==6.0.2
 python-multipart==0.0.9
 jsonschema==4.23.0
@@ -8,3 +8,5 @@ pydantic==2.8.2
 httpx==0.27.2
 tenacity==9.0.0
 python-dotenv==1.0.1
+pytest==8.3.2
+pytest-asyncio==0.23.8
