Enhance caching mechanisms and add dataset warmers
- Introduced a transparent HTTP GET cache for upstream APIs (INSEE, Eurostat, etc.) with configurable TTLs and cache directory.
- Added a CLI tool for warming essential datasets, allowing pre-fetching and caching of public finance data to reduce runtime API calls.
- Updated README_DEV.md to include caching behavior, environment variable configurations, and usage examples for dataset warmers.
- Enhanced Eurostat client to provide better defaults for missing dimensions in COFOG share calculations.
- Implemented dataset metadata fetching and record iteration for ODS API, improving data handling and flexibility.
- Added tests for cache warming functionality and ensured proper handling of server-side and client-side data aggregation.
- Created documentation for caching strategies and environment variable management.

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 .venv
 .env
 .env.*
+.pyenv
 secrets.local.env
 __pycache__/
 *.py[cod]
@@ -8,6 +9,10 @@ __pycache__/
 dist/
 build/
 .pytest_cache/
+
+# Local data caches
+data/.http_cache/
+data/cache/
 
 # Node/Next.js
 **/node_modules/
