--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,7 +12,9 @@
     "next": "14.2.5",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "cross-fetch": "4.0.0"
+    "cross-fetch": "4.0.0",
+    "echarts": "^5.5.0",
+    "echarts-for-react": "^3.0.2"
   },
   "devDependencies": {
     "@types/node": "20.12.12",
