--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,8 @@
 .pyenv
 secrets.local.env
 __pycache__/
-**/services/api/__pycache__
+services/api/__pycache__
+services/api/clients/__pycache__
 *.py[cod]
 *.egg-info/
 dist/
