dbt project under warehouse/ DuckDB default with optional Postgres target via envs. Models: staging: stg_state_budget_lines.sql, stg_procurement_contracts.sql dim: dim_cofog_mapping.sql (from seed), dim_apu_subsector.sql (APUC/APUL/ASSO tagging) fact: fct_admin_by_mission.sql, fct_admin_by_cofog.sql, fct_procurement_suppliers.sql vw: vw_procurement_contracts.sql Seeds: mapping_state_to_cofog.csv (generated from data/cofog_mapping.json) Generator script: tools/build_seeds.py Tests: Columns not-null for key fields Weights sum to 1 per source_code Admin→COFOG total equivalence within 0.1% per year Packages: dbt_utils via warehouse/packages.yml

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,6 +24,23 @@ jobs:
       - name: Run backend tests
         run: pytest -q
 
+      - name: Install dbt (DuckDB/Postgres)
+        run: |
+          python -m pip install --upgrade pip
+          pip install dbt-core dbt-duckdb dbt-postgres dbt-utils
+
+      - name: Build semantic layer (dbt)
+        env:
+          DBT_PROFILES_DIR: warehouse
+        run: |
+          python tools/build_seeds.py
+          dbt deps --project-dir warehouse || true
+          dbt build --project-dir warehouse
+      - name: Test semantic layer (dbt)
+        env:
+          DBT_PROFILES_DIR: warehouse
+        run: dbt test --project-dir warehouse
+
       - name: Set up Node
         uses: actions/setup-node@v4
         with:
