--- a/pytest.ini
+++ b/pytest.ini
@@ -2,3 +2,4 @@
 pythonpath = .
 markers =
     network: tests that require external network access and may use secrets
+norecursedirs = warehouse/dbt_packages warehouse/target warehouse/*/target
