--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,8 @@ build/
 # Local data caches
 data/.http_cache/
 data/cache/
+data/warehouse.duckdb
+data/warehouse.duckdb.wal
 
 # Node/Next.js
 **/node_modules/
@@ -24,6 +26,12 @@ data/cache/
 **/.turbo/
 **/.swc/
 **/coverage/
+frontend/tsconfig.tsbuildinfo
+
+# dbt
+warehouse/logs/
+warehouse/target/
+warehouse/dbt_packages/
 
 # Local env files
 **/.env.local
@@ -35,3 +43,6 @@ data/cache/
 .DS_Store
 .vscode/
 .idea/
+
+# Miscellaneous
+cookies.txt
