feat(build): add full Build page (Workshop + HUD) with mass/piece dials, lever parameter forms, resolution meter, and permalink sync\n\n- Implement Option D (Workshop + Meter) as the first-class Build experience\n- Add sticky HUD: resolution meter, EU lights, quick Run/Reset\n- Add dynamic lever parameter forms (paramsSchema) with Δ€ heuristics; apply to any mass as Target/Change\n- Support mass targets/changes (Δ€) and piece targets/changes (Δ%), show pending stripes in TwinBars\n- Keep permalink (?dsl=) and bootstrap restore scaffold\n\nrefactor(frontend): update nav/home links to /build; remove legacy redirect\n\nfix(api): use strawberry.ID for scenario ids (GraphQL), tests passing\n\ndocs: add BUILD_PAGE_SPEC (polished UX), expand FRONTEND_PLAN with Playground options (A/B/C), update BACKLOG\n\nchore(gitignore): unignore Next.js route directory frontend/app/build/ so the Build page is tracked

--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,11 @@ services/api/clients/__pycache__
 *.py[cod]
 *.egg-info/
 dist/
+# Build outputs (top-level)
 build/
+
+# Allow Next.js route at `frontend/app/build` (not a build artifact)
+!frontend/app/build/
 .pytest_cache/
 
 # Local data caches
