COFOG mapping: add programme-level + year-aware mappings; tests for sum-to-1 and year override precedence; mark backlog item done

--- a/data/cofog_mapping.json
+++ b/data/cofog_mapping.json
@@ -1,10 +1,40 @@
 {
   "mission_to_cofog": {
-    "150": [{"code": "09", "weight": 1.0}],
-    "124": [{"code": "07", "weight": 1.0}],
-    "178": [{"code": "02", "weight": 1.0}],
-    "204": [{"code": "05", "weight": 1.0}],
-    "304": [{"code": "03", "weight": 1.0}]
+    "150": [{ "code": "09", "weight": 1.0 }],
+    "124": [{ "code": "07", "weight": 1.0 }],
+    "178": [{ "code": "02", "weight": 1.0 }],
+    "204": [{ "code": "05", "weight": 1.0 }],
+    "304": [{ "code": "03", "weight": 1.0 }]
+  },
+  "programme_to_cofog": {
+    "1501": [{ "code": "09.1", "weight": 1.0 }],
+    "1502": [{ "code": "09.2", "weight": 1.0 }],
+    "1503": [{ "code": "09.5", "weight": 1.0 }],
+
+    "1241": [{ "code": "07.3", "weight": 1.0 }],
+    "1242": [{ "code": "07.4", "weight": 1.0 }],
+
+    "1781": [{ "code": "02.1", "weight": 1.0 }],
+    "1782": [{ "code": "02.3", "weight": 1.0 }],
+
+    "2041": [
+      { "code": "05.2", "weight": 0.6 },
+      { "code": "04.5", "weight": 0.4 }
+    ],
+
+    "3041": [{ "code": "03.1", "weight": 1.0 }]
+  },
+  "programme_to_cofog_years": {
+    "2041": {
+      "default": [
+        { "code": "05.2", "weight": 1.0 }
+      ],
+      "by_year": {
+        "2026": [
+          { "code": "05.2", "weight": 0.7 },
+          { "code": "04.5", "weight": 0.3 }
+        ]
+      }
+    }
   }
 }
-
