--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,7 +27,8 @@ jobs:
       - name: Install dbt (DuckDB/Postgres)
         run: |
           python -m pip install --upgrade pip
-          pip install dbt-core dbt-duckdb dbt-postgres dbt-utils
+          # Pin compatible versions and install only Python packages; macros like dbt_utils are installed via `dbt deps`
+          pip install "dbt-core~=1.9.0" "dbt-duckdb~=1.9.0" "dbt-postgres~=1.9.0"
 
       - name: Build semantic layer (dbt)
         env:
