--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "cross-fetch": "4.0.0",
     "echarts": "^5.5.0",
     "echarts-for-react": "^3.0.2",
+    "js-yaml": "^4.1.0",
     "leaflet": "^1.9.4",
     "next": "14.2.5",
     "react": "18.3.1",
@@ -22,6 +23,7 @@
   },
   "devDependencies": {
     "@axe-core/cli": "^4.7.3",
+    "@types/js-yaml": "^4.0.9",
     "@types/node": "20.12.12",
     "@types/react": "18.2.66",
     "@types/react-dom": "18.2.22",
