feat: Refactor simulation engine and data models
This commit introduces a major refactoring of the simulation resolution engine and the underlying data models.

Key changes include:
- **Simulation Engine:** The `run_scenario` function in the API has been updated to prevent double-counting of hierarchical changes (mission vs. piece). It now distinguishes between specified and unspecified deltas.
- **Data Models:**
    - dbt models have been updated to handle more complex COFOG mapping logic, including year-specific and programme-level fallbacks.
    - New dbt models have been added for LEGO pieces and baseline data, moving this logic from runtime JSON parsing to the data warehouse.
- **Frontend:** The build and compare pages have been refactored to use client-side rendering, improving performance and user experience.
- **Testing:** New tests have been added to verify the corrected logic in the simulation engine.
- **Documentation:** The `REFACTOR_PLAN.md` has been updated with detailed implementation notes and next steps.

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,15 +11,20 @@
     "test:smoke": "node -e \"fetch('http://localhost:3000').then(r=>{if(!r.ok)process.exit(2); else process.exit(0)}).catch(()=>process.exit(2))\" || (echo 'Start app to run smoke test' && exit 0)"
   },
   "dependencies": {
+    "@codegouvfr/react-dsfr": "^1.26.0",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
+    "@types/recharts": "^1.8.29",
     "cross-fetch": "4.0.0",
     "echarts": "^5.5.0",
     "echarts-for-react": "^3.0.2",
     "js-yaml": "^4.1.0",
     "leaflet": "^1.9.4",
-    "next": "14.2.5",
+    "next": "^14.2.32",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "react-leaflet": "^4.2.1"
+    "react-leaflet": "^4.2.1",
+    "recharts": "^3.2.0"
   },
   "devDependencies": {
     "@axe-core/cli": "^4.7.3",
