--- a/warehouse/dbt_project.yml
+++ b/warehouse/dbt_project.yml
@@ -40,4 +40,5 @@ vars:
   procurement_glob: 'data/cache/procurement_contracts_*.csv'
   lego_pieces_json: 'data/lego_pieces.json'
   lego_baseline_glob: 'data/cache/lego_baseline_*.json'
-
+  gdp_series_csv: 'data/gdp_series.csv'
+  baseline_deficit_debt_csv: 'data/baseline_deficit_debt.csv'
