CI: add sidecar validation job; Tools: add validate_sidecars.py; Docs: describe validation in CI

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -58,6 +58,9 @@ jobs:
         run: |
           python -m pip install -U pip
           python tools/warm_summary.py 2026 || true
+      - name: Validate sidecars (best-effort)
+        run: |
+          python tools/validate_sidecars.py 2026 || true
 
   frontend:
     runs-on: ubuntu-latest
