--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -76,4 +76,5 @@ jobs:
         working-directory: frontend
         run: |
           npm ci
+          npm run codegen
           npm run build --if-present
