Document scenarioCompare schema and regenerate codegen

--- a/graphql/codegen.yml
+++ b/graphql/codegen.yml
@@ -1,7 +1,7 @@
-schema: ./schema.sdl.graphql
+schema: ../graphql/schema.sdl.graphql
 documents:
-  - ./graphql/queries/**/*.graphql
-  - ./graphql/mutations/**/*.graphql
+  - ../graphql/queries/**/*.graphql
+  - ../graphql/mutations/**/*.graphql
 generates:
   ./graphql/generated/types.ts:
     plugins:
