feat: default builder to static baseline snapshot
Add LEGO_BASELINE_STATIC flag and reuse warmed JSON when warehouse is optional. Update resolvers, DSL runner and builder aggregates to honour the static snapshot, recomputing totals when only piece data exists. Simplify the Next.js entrypoint and nav so users land directly on /build while leaving other routes accessible for future work. Refresh the PLF 2026 cache warner URL to the current documentation endpoint.

--- a/.gitignore
+++ b/.gitignore
@@ -19,7 +19,9 @@ build/
 
 # Local data caches
 data/.http_cache/
-data/cache/
+data/cache/*
+!data/cache/
+!data/cache/lego_baseline_2026.json
 data/warehouse.duckdb
 data/warehouse.duckdb.wal
 
