--- a/frontend/package.json
+++ b/frontend/package.json
@@ -36,10 +36,13 @@
     "@types/node": "20.12.12",
     "@types/react": "18.2.66",
     "@types/react-dom": "18.2.22",
+    "autoprefixer": "^10.4.22",
     "eslint": "8.57.0",
     "eslint-config-next": "14.2.5",
     "graphql": "^16.9.0",
+    "postcss": "^8.5.6",
     "prettier": "^3.6.2",
+    "tailwindcss": "^3.4.17",
     "typescript": "5.4.5"
   }
 }
