--- a/frontend/package.json
+++ b/frontend/package.json
@@ -38,7 +38,7 @@
     "@types/react-dom": "18.2.22",
     "autoprefixer": "^10.4.22",
     "eslint": "8.57.0",
-    "eslint-config-next": "14.2.5",
+    "eslint-config-next": "^16.1.0",
     "graphql": "^16.9.0",
     "postcss": "^8.5.6",
     "prettier": "^3.6.2",
