--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,7 +15,9 @@
     "@codegouvfr/react-dsfr": "^1.26.0",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
+    "@types/canvas-confetti": "^1.9.0",
     "@types/recharts": "^1.8.29",
+    "canvas-confetti": "^1.9.4",
     "cross-fetch": "4.0.0",
     "echarts": "^5.5.0",
     "echarts-for-react": "^3.0.2",
@@ -24,6 +26,7 @@
     "next": "^14.2.32",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "react-is": "^19.2.3",
     "react-leaflet": "^4.2.1",
     "recharts": "^3.2.0"
   },
