--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
     "echarts-for-react": "^3.0.2",
     "js-yaml": "^4.1.0",
     "leaflet": "^1.9.4",
+    "lucide-react": "^0.562.0",
     "next": "^14.2.32",
     "react": "18.3.1",
     "react-dom": "18.3.1",
