--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,11 +23,11 @@
     "js-yaml": "^4.1.0",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.562.0",
-    "next": "^14.2.32",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
+    "next": "^16.1.1",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
     "react-is": "^19.2.3",
-    "react-leaflet": "^4.2.1",
+    "react-leaflet": "^5.0.0",
     "recharts": "^3.2.0"
   },
   "devDependencies": {
@@ -37,11 +37,11 @@
     "@graphql-codegen/typescript-operations": "^4.2.1",
     "@types/js-yaml": "^4.0.9",
     "@types/node": "20.12.12",
-    "@types/react": "18.2.66",
-    "@types/react-dom": "18.2.22",
+    "@types/react": "^19.2.7",
+    "@types/react-dom": "^19.2.3",
     "autoprefixer": "^10.4.22",
-    "eslint": "8.57.0",
-    "eslint-config-next": "^14.2.35",
+    "eslint": "^9.39.2",
+    "eslint-config-next": "^16.1.1",
     "graphql": "^16.9.0",
     "postcss": "^8.5.6",
     "prettier": "^3.6.2",
