--- a/services/api/Dockerfile
+++ b/services/api/Dockerfile
@@ -24,5 +24,5 @@ COPY schemas /app/schemas
 
 EXPOSE 8000
 
-CMD ["uvicorn", "services.api.app:app", "--host", "0.0.0.0", "--port", "8000"]
+CMD ["sh", "-c", "uvicorn services.api.app:app --host 0.0.0.0 --port ${PORT:-8000}"]
 
