--- a/services/api/requirements.txt
+++ b/services/api/requirements.txt
@@ -1,18 +1,22 @@
-fastapi==0.112.2
-uvicorn==0.30.6
-strawberry-graphql==0.281.0
-pyyaml==6.0.2
-python-multipart==0.0.9
-jsonschema==4.23.0
-pydantic==2.8.2
-httpx==0.27.2
-tenacity==9.0.0
-python-dotenv==1.0.1
-pytest==8.3.2
-pytest-asyncio==0.23.8
-duckdb==1.4.1
-sentry-sdk==2.13.0
+fastapi==0.128.0
+uvicorn==0.40.0
+strawberry-graphql==0.288.1
+pyyaml==6.0.3
+python-multipart==0.0.21
+jsonschema==4.25.1
+pydantic==2.12.5
+httpx==0.28.1
+tenacity==9.1.2
+python-dotenv==1.2.1
+pytest==9.0.2
+pytest-asyncio==1.3.0
+duckdb==1.4.3
+sentry-sdk==2.48.0
 openpyxl==3.1.5
-pdfplumber==0.11.0
-xlrd==2.0.1
+pdfplumber==0.11.8
+xlrd==2.0.2
 psycopg[binary]==3.3.2
+psycopg_pool==3.3.0
+alembic==1.13.1
+sqlalchemy==2.0.25
+google-cloud-firestore>=2.19.0
