--- a/frontend/package.json
+++ b/frontend/package.json
@@ -40,7 +40,7 @@
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.1",
     "@types/js-yaml": "^4.0.9",
-    "@types/node": "20.12.12",
+    "@types/node": "^22.10.0",
     "@types/react": "^19.2.7",
     "@types/react-dom": "^19.2.3",
     "@vitejs/plugin-react": "^5.1.2",
